--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -6,7 +6,7 @@
 
   Existing Genre:
   <%Genre.all.each do |genre|%>
-    <br><input type="checkbox" id="<%=genre.name%>" name="song[genre_ids][]" value="<%=genre.id.to_i%>"><%=genre.name%>
+    <br><input type="checkbox" id="<%=genre.name%>" name="song[genre_ids][]" value="<%=genre.id %>"><%=genre.name%>
   <%end%>
   <br></br>
 
