--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -16,7 +16,7 @@
 
   Existing Artist:
   <%Artist.all.each do |artist|%>
-    <br><input type="checkbox" id="<%=artist.name%>" name="song[artist_id]" value="<%=artist.id.to_i%>"><%=artist.name%>
+    <br><input type="checkbox" id="<%=artist.name%>" name="song[artist_id]" value="<%=artist.id %>"><%=artist.name%>
   <%end%>
   <br></br>
 
